# Acervo

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
.github/workflows/: release.yml
capabilities/: default.json
frontend/: app.js  index.html  styles.css
src/: main.rs
